Fix home section assignment for audio stories
